# TextSentiment

./: .gitignore  =3.9.0  MONGODB_SETUP_GUIDE.md  PROJECT_STRUCTURE.md  README.md  STRUCTURE.md  install_deps.py  main.py  pyproject.toml  setup.py  setup_mongodb.py  test_mongodb.py
.claude/: settings.local.json
app/: __init__.py
app/services/: bible_service.py  embedding_service.py  image_processor.py  mongodb_database.py  services_manager.py  vision_ocr.py
config/: .env.example  requirements.txt  settings.py
mobile/: setup_embedding_model.py
mobile/bible_search_app/: README.md  pubspec.yaml
mobile/bible_search_app/android/app/: build.gradle.kts
mobile/bible_search_app/android/app/src/main/: AndroidManifest.xml
mobile/bible_search_app/android/app/src/main/kotlin/com/bibleapp/bible_search_app/: MainActivity.kt
mobile/bible_search_app/assets/models/: universal_sentence_encoder.tflite
mobile/bible_search_app/test/: widget_test.dart
mobile/data-sync/: export_to_mobile.py
templates/: index.html  record_detail.html  records.html
